app/assets/stylesheets/application.scss
/*
    Styling in this and other .scss files will be compiled by the sbt-sass-compiler plugin: https://github.com/hmrc/sbt-sass-compiler
    If you encounter any issue with Sass compilation using the plugin, please reach out to the PlatUI team.
 */

.js-visible {
  display: none !important;
}

.js-enabled .js-visible {
  display: inline-block !important;
}

.character-count-input-wrapper {
  display: inline-block;
  width: 100%;
}

.custom-summary-list dd {
  width: 20%;
}

.custom-padding-header {
  padding: 0 !important;
}

@media print {
  a[href]:after {
    content: none !important;
  }
}

.claim-reference-number {
  display: block;
  word-break: break-all;
}

.claim-type-hint {
  color: #484949;
}

